--- a/aboutpg.html
+++ b/aboutpg.html
@@ -2,46 +2,62 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link type='text/css' rel='stylesheet' href='./css/universal.min.css' />
+<!--CSS-->
+    <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:400,700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href="/css/master.min.css" rel="stylesheet" type="text/css">
+<!--jQUERY-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<!--OTHER-->
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>Technical Information | Team Enginuity</title>
 </head>
 
 <body>
-    <h1>Technical Information</h1>
-    <h2>About The Site</h2>
-    <p>This website was created from scratch in the free, open-source <a target="_blank" href="http://brackets.io">Brackets</a> HTML editor. Brackets is developed in HTML, CSS and JavaScript, making anyone who uses the editor also capable of tweaking the editor by writing extensions.</p>
-    <p>We are using <a target="_blank" href="http://pages.github.com">GitHub Pages</a> to host the site. GitHub Pages was chosen because it is free, fast, reliable and simple.</p> <p>In the spirit of <a target="_blank" href="http://www.usfirst.org/aboutus/gracious-professionalism">Coopertition</a> you can also view and download all of the source code <a target="_blank" href="https://github.com/warwickhsrobotics/warwickhsrobotics.github.io">HERE.</a></p>
-    <p style="font-size: 0.8em;">Psst... If you are an FRC team, you can request a free GitHub organization account <a target="_blank" href="http://education.github.com">HERE.</a> Git is revision control software -- it can be used for groups to work on code together easily.</p>
+    <div id="page">
+        <div id="header">
+            {% include header.html %}
+        </div>
+        <div id="navbar">
+            {% include navbar.html %}
+        </div>
+        <div id="main">
+            <h1>Technical Information</h1>
+            <h2>About The Site</h2>
+            <p>This website was created from scratch in the free, open-source <a target="_blank" href="http://brackets.io">Brackets</a> HTML editor. Brackets is developed in HTML, CSS and JavaScript, making anyone who uses the editor also capable of tweaking the editor by writing extensions.</p>
+            <p>We are using <a target="_blank" href="http://pages.github.com">GitHub Pages</a> to host the site. GitHub Pages was chosen because it is free, fast, reliable and simple.</p> <p>In the spirit of <a target="_blank" href="http://www.usfirst.org/aboutus/gracious-professionalism">Coopertition</a> you can also view and download all of the source code <a target="_blank" href="https://github.com/warwickhsrobotics/warwickhsrobotics.github.io">HERE.</a></p>
+            <p style="font-size: 0.8em;">Psst... If you are an FRC team, you can request a free GitHub organization account <a target="_blank" href="http://education.github.com">HERE.</a> Git is revision control software -- it can be used for groups to work on code together easily.</p>
+        </div>
+        <div id="footer">
+            {% include footer.html %}
+        </div>
+    </div>
+<!--
+    KEEPS NAVBAR BELOW HEADER, BUT STICKS TO THE TOP
+    ADD TOTAL PADDING (TOP AND BOTTOM) TO 'h'
+-->
     <script>
-        window.parent.addEventListener('message', function (e) {
-        var eventName = e.data[0],
-        var data      = e.data[1];
-
-        switch (eventName) {
-            case 'referrer': injectBaseElement(data); break;
-            ...
-        }
-
-        }, false);
+        $(window).scroll(function(){
+            var s=$(this).scrollTop(),
+                h=$('#header').height();
+            if(s<h)
+                $('#navbar').css('top',(h+10)-s);
+            else
+                $('#navbar').css('top',0);
+            });
     </script>
+<!--
+    GOOGLE ANALYTICS
+-->
     <script>
-        function resize() {
-            var height = $(html).height();
-            
-            // Backwards – send message to parent
-            window.parent.postMessage(['setHeight', height], '*');
-        }
-    </script>
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
-    ga('send', 'pageview');
+        ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
+        ga('send', 'pageview');
 
     </script>
 </body>
