--- a/contact.html
+++ b/contact.html
@@ -3,46 +3,62 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link type='text/css' rel='stylesheet' href='./css/universal.min.css' />
+<!--CSS-->
+    <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:400,700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href="/css/master.min.css" rel="stylesheet" type="text/css">
+<!--jQUERY-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<!--OTHER-->
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>Contact Us | Team Enginuity</title>
 </head>
 
 <body>
-    <h1>Contact Us</h1>
-    <p>Use the following contact information to make any inquiries regarding <em>Team Enginuity.</em></p>
-    <p>Inquiries by Phone</p>
-    <h2>(757) 591-4700</h2>
-    <p>Inquiries by Email</p>
-    <h2>warwickhsrobotics [at] gmail [dot] com</h2>
+    <div id="page">
+        <div id="header">
+            {% include header.html %}
+        </div>
+        <div id="navbar">
+            {% include navbar.html %}
+        </div>
+        <div id="main">
+            <h1>Contact Us</h1>
+            <p>Use the following contact information to make any inquiries regarding <em>Team Enginuity.</em></p>
+            <p>Inquiries by Phone</p>
+            <h2>(757) 591-4700</h2>
+            <p>Inquiries by Email</p>
+            <h2>warwickhsrobotics [at] gmail [dot] com</h2>
+        </div>
+        <div id="footer">
+            {% include footer.html %}
+        </div>
+    </div>
+<!--
+    KEEPS NAVBAR BELOW HEADER, BUT STICKS TO THE TOP
+    ADD TOTAL PADDING (TOP AND BOTTOM) TO 'h'
+-->
     <script>
-        window.parent.addEventListener('message', function (e) {
-        var eventName = e.data[0],
-        var data      = e.data[1];
-
-        switch (eventName) {
-            case 'referrer': injectBaseElement(data); break;
-            ...
-        }
-
-        }, false);
+        $(window).scroll(function(){
+            var s=$(this).scrollTop(),
+                h=$('#header').height();
+            if(s<h)
+                $('#navbar').css('top',(h+10)-s);
+            else
+                $('#navbar').css('top',0);
+            });
     </script>
+<!--
+    GOOGLE ANALYTICS
+-->
     <script>
-        function resize() {
-            var height = $(html).height();
-            
-            // Backwards – send message to parent
-            window.parent.postMessage(['setHeight', height], '*');
-        }
-    </script>
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
-    ga('send', 'pageview');
+        ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
+        ga('send', 'pageview');
 
     </script>
 </body>
