--- a/first.html
+++ b/first.html
@@ -2,55 +2,71 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link type='text/css' rel='stylesheet' href='./css/universal.min.css' />
+<!--CSS-->
+    <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:400,700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href="/css/master.min.css" rel="stylesheet" type="text/css">
+<!--jQUERY-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<!--OTHER-->
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>About FIRST | Team Enginuity</title>
 </head>
 
 <body>
-    <h1>About <em>FIRST</em></h1>
-    <p>Founded in 1989 in Manchester, New Hampshire by Dean Kamen, <em>FIRST</em> is a non-profit organization dedicated to hosting the Jr. FLL, FLL, FTC and FRC robotics leagues as well as instilling a fascination and appreciation for science and technology.</p>
-    <p><em>FIRST </em>is an acronym that stands for <em><strong>F</strong>or <strong>I</strong>nspiration and <strong>R</strong>ecognition of <strong>S</strong>cience and <strong>T</strong>echnology</em>...</p>
-    <h2 class="center">However, To many it is more than an acronym.</h2>
-    <p><em>FIRST</em> becomes a way of life. All of the skills, experiences and memories that you gain while being in any FIRST team, from Jr. FLL to FRC will be beneficial throughout <em>your entire life. FIRST </em> not only provides life-lasting memories, experiences, and skills; it also encourages members of robotics teams everywhere to share them with other teams, help get more teams started, and encourage the prospects of Science and Technology to others (e.g. an FRC team starting a FLL team for elementary school-age kids.)</p>
-    <p class="center"><iframe class="youtube" width="356" height="200" src="http://www.youtube.com/embed/6aB42uWaWRU" frameborder="0" allowfullscreen></iframe></p>
-    <p class="center" style="font-size: 0.75em"><strong>A TED talk by Ron Visser, leader of the first European FRC team discussing the prospect of Science and Technology</strong></p>
-    <h1>Core Values</h1>
-    <h2>Gracious Professionalism</h2>
-    <p class="center"><iframe class="youtube" width="356" height="200" src="http://www.youtube.com/embed/h2e6gxczMxc" frameborder="0" allowfullscreen></iframe></p>
-    <p class="center" style="font-size: 0.75em"><strong>Woodie Flowers, inventor of the term explains it in this video</strong></p>
-    <p>Gracious Professionalism is one of the core values at <em>FIRST.</em> It's all about encouraging innovation and competition. It encourages teams to fiercely compete against one another in a <strong>friendly</strong> manner; At the end of the day no one is a loser; no one is put down -- everyone's accomplishments are equally recognized and celebrated.</p>
-    <h2>Coopertition</h2>
-    <p>Coopertition (a cross between the words Cooperation and Competition) is another core value at <em>FIRST.</em> It encourages teams to collaborate between each other despite the fact that they are competing between each other. It means that if a team at the pit needs something as small as an allen wrench or as large as a laptop, and you have one, you let them borrow it.</p>
+    <div id="page">
+        <div id="header">
+            {% include header.html %}
+        </div>
+        <div id="navbar">
+            {% include navbar.html %}
+        </div>
+        <div id="main">
+            <h1>About <em>FIRST</em></h1>
+            <p>Founded in 1989 in Manchester, New Hampshire by Dean Kamen, <em>FIRST</em> is a non-profit organization dedicated to hosting the Jr. FLL, FLL, FTC and FRC robotics leagues as well as instilling a fascination and appreciation for science and technology.</p>
+            <p><em>FIRST </em>is an acronym that stands for <em><strong>F</strong>or <strong>I</strong>nspiration and <strong>R</strong>ecognition of <strong>S</strong>cience and <strong>T</strong>echnology</em>...</p>
+            <h2 class="center">However, To many it is more than an acronym.</h2>
+            <p><em>FIRST</em> becomes a way of life. All of the skills, experiences and memories that you gain while being in any FIRST team, from Jr. FLL to FRC will be beneficial throughout <em>your entire life. FIRST </em> not only provides life-lasting memories, experiences, and skills; it also encourages members of robotics teams everywhere to share them with other teams, help get more teams started, and encourage the prospects of Science and Technology to others (e.g. an FRC team starting a FLL team for elementary school-age kids.)</p>
+            <p class="center"><iframe class="youtube" width="356" height="200" src="http://www.youtube.com/embed/6aB42uWaWRU" frameborder="0" allowfullscreen></iframe></p>
+            <p class="center" style="font-size: 0.75em"><strong>A TED talk by Ron Visser, leader of the first European FRC team discussing the prospect of Science and Technology</strong></p>
+            <h1>Core Values</h1>
+            <h2>Gracious Professionalism</h2>
+            <p class="center"><iframe class="youtube" width="356" height="200" src="http://www.youtube.com/embed/h2e6gxczMxc" frameborder="0" allowfullscreen></iframe></p>
+            <p class="center" style="font-size: 0.75em"><strong>Woodie Flowers, inventor of the term explains it in this video</strong></p>
+            <p>Gracious Professionalism is one of the core values at <em>FIRST.</em> It's all about encouraging innovation and competition. It encourages teams to fiercely compete against one another in a <strong>friendly</strong> manner; At the end of the day no one is a loser; no one is put down -- everyone's accomplishments are equally recognized and celebrated.</p>
+            <h2>Coopertition</h2>
+            <p>Coopertition (a cross between the words Cooperation and Competition) is another core value at <em>FIRST.</em> It encourages teams to collaborate between each other despite the fact that they are competing between each other. It means that if a team at the pit needs something as small as an allen wrench or as large as a laptop, and you have one, you let them borrow it.</p>
+        </div>
+        <div id="footer">
+            {% include footer.html %}
+        </div>
+    </div>
+<!--
+    KEEPS NAVBAR BELOW HEADER, BUT STICKS TO THE TOP
+    ADD TOTAL PADDING (TOP AND BOTTOM) TO 'h'
+-->
     <script>
-        window.parent.addEventListener('message', function (e) {
-        var eventName = e.data[0],
-        var data      = e.data[1];
-
-        switch (eventName) {
-            case 'referrer': injectBaseElement(data); break;
-            ...
-        }
-
-        }, false);
+        $(window).scroll(function(){
+            var s=$(this).scrollTop(),
+                h=$('#header').height();
+            if(s<h)
+                $('#navbar').css('top',(h+10)-s);
+            else
+                $('#navbar').css('top',0);
+            });
     </script>
+<!--
+    GOOGLE ANALYTICS
+-->
     <script>
-        function resize() {
-            var height = $(html).height();
-            
-            // Backwards – send message to parent
-            window.parent.postMessage(['setHeight', height], '*');
-        }
-    </script>
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
-    ga('send', 'pageview');
+        ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
+        ga('send', 'pageview');
 
     </script>
 </body>
