--- a/frc.html
+++ b/frc.html
@@ -2,72 +2,87 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link type='text/css' rel='stylesheet' href='./css/universal.min.css' />
-    <title>FRC | Team Enginuity</title>
+<!--CSS-->
+    <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:400,700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href="/css/master.min.css" rel="stylesheet" type="text/css">
+<!--jQUERY-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<!--OTHER-->
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <title>About FRC | Team Enginuity</title>
 </head>
 
 <body>
-    <h1>About FRC</h1>
-    <p>2014 Game: <strong>Aerial Assist</strong></p>
-    <table class="gameinfo center">
-        <tr>
-            <td class="gamelogo"><img alt="Aerial Assist Logo" src="./assets/first/frc2014.png"></td>
-            <td class="gamevideo"><iframe width="400" height="225" src="http://www.youtube.com/embed/oxp4dkMQ1Vo" frameborder="0" allowfullscreen></iframe></td>
-        </tr>
-    </table>
-    <div class="gamecontainer">
-        <div class="gamelinks">
-            <h2>Related Resources:</h2>
-            <ul>
-                <li><a target="_blank" href="http://frc-manual.usfirst.org/">
-                    Game Manual</a></li>
-                <li><a target="_blank" href="http://frc-manual.usfirst.org/Updates/0">
-                    <strong>UPDATES</strong> to Manual</a></li>
-                <li><a target="_blank" href="http://www.usfirst.org/roboticsprograms/frc/technical-resources">
-                    Technical Resources</a></li>
-                <li><a target="_blank" href="http://www.usfirst.org/roboticsprograms/frc/awards">
-                    List of Available Awards</a></li>
-                <li><a target="_blank" href="https://frc-qa.usfirst.org/Questions.php">
-                    Q&A With FIRST</a></li>
-            </ul>
+    <div id="page">
+        <div id="header">
+            {% include header.html %}
         </div>
-        <div class="gametext">
-            <p>AERIAL ASSIST is played by two competing Alliances of three robots each on a flat 25’ x 54’ foot field, straddled by a truss suspended just over five feet above the floor. The objective is to score as many balls in goals as possible during a two (2)-minute and 30-second match. The more Alliances score their ball in their goals, and the more they work together to do it, the more points their Alliance receives.</p> 
-            <p>The match begins with one 10-second Autonomous Period in which robots operate independently of driver. Each robot may begin with a ball and attempt to score it in a goal. Alliances earn bonus points for scoring balls in this mode and for any of their robots that move in to their zones. Additionally, each high/low pair of goals will be designated “hot” for five seconds, but the order of which side is first is randomized. For each ball scored in a “hot” goal, the Alliance earns additional bonus points.</p>
-            <p>For the rest of the match, drivers remotely control robots from behind a protective wall. Once all balls in autonomous are scored, only one ball is re-entered in to play, and the Alliances must cycle a single ball as many times as possible for the remainder of the match. With the single ball, they try to maximize their points earned by throwing balls over the truss, catching balls launched over the truss, and scoring in the high and low goals on the far side of the field.</p>
-            <p>Alliances receive large bonuses for “assists,” which are earned for each robot that has possession of the ball in a zone as the ball moves down the field.</p>
+        <div id="navbar">
+            {% include navbar.html %}
+        </div>
+        <div id="main">
+            <h1>About FRC</h1>
+            <p>2014 Game: <strong>Aerial Assist</strong></p>
+            <table class="gameinfo center">
+                <tr>
+                    <td class="gamelogo"><img alt="Aerial Assist Logo" src="./assets/first/frc2014.png"></td>
+                    <td class="gamevideo"><iframe width="400" height="225" src="http://www.youtube.com/embed/oxp4dkMQ1Vo" frameborder="0" allowfullscreen></iframe></td>
+                </tr>
+            </table>
+            <div class="gamecontainer">
+                <div class="gamelinks">
+                    <h2>Related Resources:</h2>
+                    <ul>
+                        <li><a target="_blank" href="http://frc-manual.usfirst.org/">
+                            Game Manual</a></li>
+                        <li><a target="_blank" href="http://frc-manual.usfirst.org/Updates/0">
+                            <strong>UPDATES</strong> to Manual</a></li>
+                        <li><a target="_blank" href="http://www.usfirst.org/roboticsprograms/frc/technical-resources">
+                            Technical Resources</a></li>
+                        <li><a target="_blank" href="http://www.usfirst.org/roboticsprograms/frc/awards">
+                            List of Available Awards</a></li>
+                        <li><a target="_blank" href="https://frc-qa.usfirst.org/Questions.php">
+                            Q&A With FIRST</a></li>
+                    </ul>
+                </div>
+                <div class="gametext">
+                    <p>AERIAL ASSIST is played by two competing Alliances of three robots each on a flat 25’ x 54’ foot field, straddled by a truss suspended just over five feet above the floor. The objective is to score as many balls in goals as possible during a two (2)-minute and 30-second match. The more Alliances score their ball in their goals, and the more they work together to do it, the more points their Alliance receives.</p> 
+                    <p>The match begins with one 10-second Autonomous Period in which robots operate independently of driver. Each robot may begin with a ball and attempt to score it in a goal. Alliances earn bonus points for scoring balls in this mode and for any of their robots that move in to their zones. Additionally, each high/low pair of goals will be designated “hot” for five seconds, but the order of which side is first is randomized. For each ball scored in a “hot” goal, the Alliance earns additional bonus points.</p>
+                    <p>For the rest of the match, drivers remotely control robots from behind a protective wall. Once all balls in autonomous are scored, only one ball is re-entered in to play, and the Alliances must cycle a single ball as many times as possible for the remainder of the match. With the single ball, they try to maximize their points earned by throwing balls over the truss, catching balls launched over the truss, and scoring in the high and low goals on the far side of the field.</p>
+                    <p>Alliances receive large bonuses for “assists,” which are earned for each robot that has possession of the ball in a zone as the ball moves down the field.</p>
+                </div>
+        </div>
+        <div id="footer">
+            {% include footer.html %}
         </div>
     </div>
+<!--
+    KEEPS NAVBAR BELOW HEADER, BUT STICKS TO THE TOP
+    ADD TOTAL PADDING (TOP AND BOTTOM) TO 'h'
+-->
     <script>
-        window.parent.addEventListener('message', function (e) {
-        var eventName = e.data[0],
-        var data      = e.data[1];
-
-        switch (eventName) {
-            case 'referrer': injectBaseElement(data); break;
-            ...
-        }
-
-        }, false);
+        $(window).scroll(function(){
+            var s=$(this).scrollTop(),
+                h=$('#header').height();
+            if(s<h)
+                $('#navbar').css('top',(h+10)-s);
+            else
+                $('#navbar').css('top',0);
+            });
     </script>
+<!--
+    GOOGLE ANALYTICS
+-->
     <script>
-        function resize() {
-            var height = $(html).height();
-            
-            // Backwards – send message to parent
-            window.parent.postMessage(['setHeight', height], '*');
-        }
-    </script>
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
-    ga('send', 'pageview');
+        ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
+        ga('send', 'pageview');
 
     </script>
 </body>
