--- a/index.html
+++ b/index.html
@@ -2,116 +2,46 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     
 <!--
-     TEAM ENGINUITY
+     TEAM ENGINUITY (INDEX)
      FTC 5969 | FRC 4538
      DESIGN BY JONATHAN LACSON
 
      CODED BY HAND IN BRACKETS
-     VERSION 0.5.1 - 6 FEB 2014
+     VERSION 0.6e - 6 FEB 2014
 -->
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!--CSS-->
     <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:400,700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link href="./css/universal.min.css" rel="stylesheet" type="text/css">
-    <link href="./css/index.min.css" rel="stylesheet" type="text/css">
+    <link href="/css/master.min.css" rel="stylesheet" type="text/css">
 <!--jQUERY-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <!--OTHER-->
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <title>Team Enginuity</title>
+    <title>Home | Team Enginuity</title>
     <meta name='description' content="Second-Year FTC and FRC Team with lots of potential from Newport News, Virginia">
 </head>
 
 <body>
     <div id="page">
         <div id="header">
-            <div id="header-logo">
-                <a href="./index.html"><img alt="Team Logo" src=./assets/hf/headerlogo.png></a>
-            </div>
-            <div id="header-text">
-                <h1 title="Pronounced en·gi·new·i·ty">Team Enginuity</h1>
-                <h2><strong>FTC #5969 | FRC #4538</strong></h2>
-            </div>
-            <div id="header-firstlogo">
-                <a href="http://www.usfirst.org" target="_blank" title="Link to FIRST"><img alt="FIRST logo" src=./assets/hf/firstlogo.png /></a>
-            </div>
+            {% include header.html %}
         </div>
         <div id="navbar">
-            <p><a target="cstage" href="./home.html">Home</a></p>
-            <p><a target="cstage" href="./team.html">Team</a></p>
-            <p><a target="cstage" href="./sponsors.html">Sponsors</a></p>
-            <p><a target="cstage" href="./contact.html">Contact</a></p>
-            <p><a target="cstage" href="./first.html">FIRST</a></p>
-            <p><a target="cstage" href="./ftc.html">FTC</a></p>
-            <p><a target="cstage" href="./frc.html">FRC</a></p>
-            <p><a target="cstage" href="./media.html">Media</a></p>
-            <p><a target="cstage" href="./events.html">Events</a></p>
-            <p><a target="cstage" href="./links.html">Links</a></p>
+            {% include navbar.html %}
         </div>
         <div id="main">
-            <iframe name="cstage" src="home.html" width="100%" height="800px" id="main-content-iframe" frameborder="0">If you're seeing this message, it means IFrames are not supported; Please enable IFrames or upgrade to a compatible browser that supports IFrames.</iframe>
-            <script>
-                $( "iframe" ).on('load',function() {
-                    document.title = document.getElementById("main-content-iframe").contentDocument.title;
-                });
-            </script>
+            <h1>Welcome!</h1>
+            <img class="teamphoto" alt="Team Photo" src="./assets/home/teampic_small.jpg">
+            <p class="center" style="font-size: 0.75em;"><strong>(un)official Team Photo</strong></p>
+            <p>This is the official site of Team Enginuity. We are Warwick High School's Robotics Team in Newport News, Virginia. This year (the 2013-2014 school year) is our second. We are glad that you have decided to take the time to come check out our website! Whether you are part of a veteran FIRST team, a rookie team or not part of a team, our site contains lots of useful information. Here, you can find current information about the 2013 FTC Game, <strong>Block Party</strong>; and the 2014 FRC Game, <strong>Aerial Assist</strong>; along with further information about our team and our sponsors, media from previous competitons, and resources for other teams.</p>
         </div>
         <div id="footer">
-            <div id="footer-top">
-                <div id="footer-leagues" class="center">
-                    <p><a target="_blank" title="FRC Information" href="http://usfirst.org/frc"><img alt="FRC logo" src="./assets/hf/frc.png"></a></p>
-                    <p><a target="_blank" title="FTC Information" href="http://usfirst.org/ftc"><img alt="FTC logo" src="./assets/hf/ftc.png"></a></p>
-                </div>
-                <div id="footer-whs">
-                    <p><a href="http://warwick.nn.k12.va.us">Warwick High School</a><br>
-                    51 Copeland Lane<br>
-                    Newport News, Virginia<br>
-                    23601<br>
-                    (757) 591-4700
-                </div>
-                <div id="footer-socialmedia">
-                    <p><a target="_blank" title="Like Us on Facebook" href="https://www.facebook.com/pages/Team-Enginuity-Warwick-High-School-Robotics-Team/574751449237559"><img alt="Facebook logo" src="./assets/hf/facebook.png"></a></p>
-                    <p><a target="_blank" title="Follow Us on Twitter" href="http://www.twitter.com/EnginuityWHS"><img alt="Twitter logo" src="./assets/hf/twitter.png"></a></p>
-                    <p><a target="_blank" title="Follow Us on Instagram" href="http://www.instagram.com/EnginuityWHS"><img alt="Instagram Logo" src="./assets/hf/ig.png"></a></p>
-                </div>
-            </div>
-            <div id="footer-bottom">
-                <div id="footer-bottom-info">
-                    <p><a target="cstage" href="./aboutpg.html">Technical Information</a> | Site looks best on <a target="_blank" href="http://www.mozilla.com/firefox">Firefox</a> or <a target="_blank" href="http://www.google.com/chrome">Chrome</a></p>
-                </div>
-            </div>
+            {% include footer.html %}
         </div>
     </div>
-<!--
-    ESOTERIC HTML AND JS
-    USED TO MELD IFRAME AND PARENT
-    SEE: http://benvinegar.github.io/seamless-talk/
--->
-    <script>
-        var iframe = document.getElementById('cstage');
-
-        iframe.contentWindow.postMessage(
-            ['referrer', window.location.href], '*'
-        );
-    </script>
-    <script>
-        window.addEventListener('message', function (e) {
-            var $iframe = $('#cstage');
-
-            var eventName = e.data[0];
-            var data      = e.data[1];
-
-            switch (eventName) {
-                case 'setHeight':
-                    $iframe.height(data);
-                    break;
-                    ...
-            }
-        }, false);
-    </script>
 <!--
     KEEPS NAVBAR BELOW HEADER, BUT STICKS TO THE TOP
     ADD TOTAL PADDING (TOP AND BOTTOM) TO 'h'
@@ -126,7 +56,9 @@
                 $('#navbar').css('top',0);
             });
     </script>
-    <!--GOOGLE ANALYTICS-->
+<!--
+    GOOGLE ANALYTICS
+-->
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
