--- a/links.html
+++ b/links.html
@@ -2,70 +2,85 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link type='text/css' rel='stylesheet' href='./css/universal.min.css' />
+<!--CSS-->
+    <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:400,700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href="/css/master.min.css" rel="stylesheet" type="text/css">
+<!--jQUERY-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<!--OTHER-->
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>Links | Team Enginuity</title>
 </head>
 
-<body id="links">
-    <h1>Useful Links</h1>
+<body>
+    <div id="page">
+        <div id="header">
+            {% include header.html %}
+        </div>
+        <div id="navbar">
+            {% include navbar.html %}
+        </div>
+        <div id="main">
+            <h1>Useful Links</h1>
 
-    <h2>Resources</h2>
-    <p class="linkdesc">Places with general knowledge about FIRST, FTC, or FRC topics.</p>
-        <p><a target="_blank" href="http://www.usfirst.org/">
-            FIRST</a></p>
-        <p><a target="_blank" href="http://www.virginiafirst.org">
-            Virginia FIRST (contains material related to FIRST events in the state of Virginia)</a></p>
-        <p><a target="_blank" href="http://www.thebluealliance.com">
-            The Blue Alliance (contains statistics on every FRC team)</a></p>
+            <h2>Resources</h2>
+            <p class="linkdesc">Places with general knowledge about FIRST, FTC, or FRC topics.</p>
+                <p><a target="_blank" href="http://www.usfirst.org/">
+                    FIRST</a></p>
+                <p><a target="_blank" href="http://www.virginiafirst.org">
+                    Virginia FIRST (contains material related to FIRST events in the state of Virginia)</a></p>
+                <p><a target="_blank" href="http://www.thebluealliance.com">
+                    The Blue Alliance (contains statistics on every FRC team)</a></p>
 
-    <h2>Message Boards / Forums</h2>
-    <p class="linkdesc">Places to discuss, ask questions and reach the broader public with issues concerning FTC or FRC.</p>
-        <p><a target="_blank" href="http://www.chiefdelphi.com/forums/index.php">
-            Chief Delphi</a></p>
-        <p><a target="_blank" href="http://www.chiefdelphi.com/forums/forumdisplay.php?f=146">
-            Chief Delphi (FTC sub-forum)</a></p>
-        <p><a target="_blank" href="http://www.reddit.com/r/FRC">
-            /r/FRC on Reddit</a></p>
-        <p><a target="_blank" href="http://www.reddit.com/r/FTC">
-            /r/FTC on Reddit</a></p>
+            <h2>Message Boards / Forums</h2>
+            <p class="linkdesc">Places to discuss, ask questions and reach the broader public with issues concerning FTC or FRC.</p>
+                <p><a target="_blank" href="http://www.chiefdelphi.com/forums/index.php">
+                    Chief Delphi</a></p>
+                <p><a target="_blank" href="http://www.chiefdelphi.com/forums/forumdisplay.php?f=146">
+                    Chief Delphi (FTC sub-forum)</a></p>
+                <p><a target="_blank" href="http://www.reddit.com/r/FRC">
+                    /r/FRC on Reddit</a></p>
+                <p><a target="_blank" href="http://www.reddit.com/r/FTC">
+                    /r/FTC on Reddit</a></p>
 
-    <h2>Nearby Teams</h2>
-        <p class="linkdesc">If you would like your team featured here and you are in the Hampton Roads area, please send an email to <strong>warwickhsrobotics [at] gmail [dot] com.</strong></p>
-        <p><a target="_blank" href="http://www.triplehelixrobotics.org/index.html">
-            Triple Helix (FRC 2363)</a></p>
-        <p><a target="_blank" href="http://www.team122.org/">
-            The NASA Knights (FRC 122)</a></p>
+            <h2>Nearby Teams</h2>
+                <p class="linkdesc">If you would like your team featured here and you are in the Hampton Roads area, please send an email to <strong>warwickhsrobotics [at] gmail [dot] com.</strong></p>
+                <p><a target="_blank" href="http://www.triplehelixrobotics.org/index.html">
+                    Triple Helix (FRC 2363)</a></p>
+                <p><a target="_blank" href="http://www.team122.org/">
+                    The NASA Knights (FRC 122)</a></p>
+        </div>
+        <div id="footer">
+            {% include footer.html %}
+        </div>
+    </div>
+<!--
+    KEEPS NAVBAR BELOW HEADER, BUT STICKS TO THE TOP
+    ADD TOTAL PADDING (TOP AND BOTTOM) TO 'h'
+-->
     <script>
-    <script>
-        window.parent.addEventListener('message', function (e) {
-        var eventName = e.data[0],
-        var data      = e.data[1];
-
-        switch (eventName) {
-            case 'referrer': injectBaseElement(data); break;
-            ...
-        }
-
-        }, false);
+        $(window).scroll(function(){
+            var s=$(this).scrollTop(),
+                h=$('#header').height();
+            if(s<h)
+                $('#navbar').css('top',(h+10)-s);
+            else
+                $('#navbar').css('top',0);
+            });
     </script>
+<!--
+    GOOGLE ANALYTICS
+-->
     <script>
-        function resize() {
-            var height = $(html).height();
-            
-            // Backwards – send message to parent
-            window.parent.postMessage(['setHeight', height], '*');
-        }
-    </script>
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
-    ga('send', 'pageview');
+        ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
+        ga('send', 'pageview');
 
     </script>
 </body>
