--- a/sponsors.html
+++ b/sponsors.html
@@ -2,53 +2,69 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link type='text/css' rel='stylesheet' href='./css/universal.min.css' />
+<!--CSS-->
+    <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:400,700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href="/css/master.min.css" rel="stylesheet" type="text/css">
+<!--jQUERY-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<!--OTHER-->
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>Sponsors | Team Enginuity</title>
 </head>
 
 <body>
-    <h1>Sponsors</h1>
-    <p>Team Enginuity would like to thank the following organizations and individuals for their contributions. These contributions help fund expenditures such as registration fees, travel expenses, extra parts, marketing costs, and more.</p>
-    <div id="sp-logos" class="center">
-        <h2>Organizations</h2>
-        <a href="http://sbo.nn.k12.va.us" target="_blank"><img alt="Newport News Public Schools" src="./assets/spon/nnps.gif"></a>
-        <a href="http://robotics.nasa.gov" target="_blank"><img alt="NASA" src="./assets/spon/nasa.png"></a>
-        <a href="http://www.rockwellcollins.com/" target="_blank"><img alt="Rockwell Collins" src="./assets/spon/rockwell.png"></a>
+    <div id="page">
+        <div id="header">
+            {% include header.html %}
+        </div>
+        <div id="navbar">
+            {% include navbar.html %}
+        </div>
+        <div id="main">
+            <h1>Sponsors</h1>
+            <p>Team Enginuity would like to thank the following organizations and individuals for their contributions. These contributions help fund expenditures such as registration fees, travel expenses, extra parts, marketing costs, and more.</p>
+            <div id="sp-logos" class="center">
+                <h2>Organizations</h2>
+                <a href="http://sbo.nn.k12.va.us" target="_blank"><img alt="Newport News Public Schools" src="./assets/spon/nnps.gif"></a>
+                <a href="http://robotics.nasa.gov" target="_blank"><img alt="NASA" src="./assets/spon/nasa.png"></a>
+                <a href="http://www.rockwellcollins.com/" target="_blank"><img alt="Rockwell Collins" src="./assets/spon/rockwell.png"></a>
+            </div>
+            <div id="sp-people" class="center">
+                <h2>Individuals</h2>
+                <p>Christian May</p>
+            </div>
+        </div>
+        <div id="footer">
+            {% include footer.html %}
+        </div>
     </div>
-    <div id="sp-people" class="center">
-        <h2>Individuals</h2>
-        <p>Christian May</p>
-    </div>
+<!--
+    KEEPS NAVBAR BELOW HEADER, BUT STICKS TO THE TOP
+    ADD TOTAL PADDING (TOP AND BOTTOM) TO 'h'
+-->
     <script>
-        window.parent.addEventListener('message', function (e) {
-        var eventName = e.data[0],
-        var data      = e.data[1];
-
-        switch (eventName) {
-            case 'referrer': injectBaseElement(data); break;
-            ...
-        }
-
-        }, false);
+        $(window).scroll(function(){
+            var s=$(this).scrollTop(),
+                h=$('#header').height();
+            if(s<h)
+                $('#navbar').css('top',(h+10)-s);
+            else
+                $('#navbar').css('top',0);
+            });
     </script>
+<!--
+    GOOGLE ANALYTICS
+-->
     <script>
-        function resize() {
-            var height = $(html).height();
-            
-            // Backwards – send message to parent
-            window.parent.postMessage(['setHeight', height], '*');
-        }
-    </script>
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
-    ga('send', 'pageview');
+        ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
+        ga('send', 'pageview');
 
     </script>
 </body>
