--- a/team.html
+++ b/team.html
@@ -3,128 +3,144 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link type='text/css' rel='stylesheet' href='./css/universal.min.css' />
+<!--CSS-->
+    <link href='http://fonts.googleapis.com/css?family=Oswald|Raleway:500|Open+Sans:400,700|Droid+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link href="/css/master.min.css" rel="stylesheet" type="text/css">
+<!--jQUERY-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<!--OTHER-->
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>Team Roster | Team Enginuity</title>
 </head>
 
 <body>
-    <h1>Team Roster</h1>
-    <table id="team-table" border=0>
-        <colgroup>
-            <col span="1">
-            <col span="1">
-        </colgroup>
-        <thead>
-            <tr>
-                <td><h2>Sub-division</h2></td>
-                <td><h2>Members</h2></td>
-            </tr>
-        </thead>
-        <tr class="normalp">
-            <td>Coaches + Mentors</td>
-            <td><h3>Coach: Karen Bazemore</h3>
-                <p>C. Garrity (College Student and FIRST alum)</p>
-                <p>J. Stork (NNPS)</p>
-                <p>M. Johnson (US Navy and FIRST alum)</p>
-                <p>E. Leeks (Huntington Ingalls)</p>
-            </td>
-        </tr>
-        <tr class="normalp">
-            <td>Captains</td>
-            <td><h3>Co-Team Captains: Christian M. (2015) & Sahaj B. (2015)</h3>
-                <p>Safety Captain: Las S. (2016)</p></td>
-        </tr>
-            <td>Mechanical</td>
-            <td><h3>Co-Leads: Ernest N. (2016) & Adam P. (2016)</h3>
-                <p>Courtney S. (2014)</p>
-                <p>Sahaj B. (2015)</p>
-                <p>Christian M. (2015)</p>
-                <p>Dani C. (2016)</p>
-                <p>Taj F. (2016)</p>
-                <p>Quintin L. (2016)</p>
-                <p>Justin G. (2016)</p>
-                <p>Joanne S. (2016)</p>
-                <p>Joe B. (2017)</p>
-                <p>Daniel B. (2017)</p>
-            </td>
-        </tr>
-        <tr>
-            <td>Electrical</td>
-            <td><h3>Lead: Quintin L. (2016)</h3>
-                <p>Lawrence P. (2015)</p>
-                <p>Sarah F. (2016)</p>
-                <p>Ernest N. (2016)</p>
-                <p>Joanne S. (2016)</p>
-                <p>Daniel B. (2017)</p>
-                <p>Valencia R. (2017)</p>
-            </td>
-        </tr>
-        <tr>
-            <td>Programming</td>
-            <td><h3>Lead: Sahaj B. (2015)</h3>
-                <p>Lawrence P. (2015)</p>
-                <p>Rakshith R. (2015)</p>
-                <p>Sarah F. (2016)</p>
-            </td>
-        </tr>
-        <tr>
-            <td>Strategy</td>
-            <td><h3>Lead: Christian M. (2015)</h3>
-                <p>Sahaj B. (2015)</p>
-                <p>Lawrence P. (2015)</p>
-                <p>Rakshith R. (2015)</p>
-                <p>Quintin L. (2016)</p>
-                <p>Ernest N. (2016)</p>
-            </td>
-        </tr>
-        <tr>
-            <td>Design</td>
-            <td><h3>Lead: Christian M. (2015)</h3>
-                <p>Sahaj B. (2015)</p>
-                <p>Rakshith R. (2015)</p>
-                <p>Ernest N. (2016)</p>
-            </td>
-        </tr>
-        <tr>
-            <td>Website / Social Media</td>
-            <td><h3>Lead: Jonathan L. (2016)</h3></td>
-        </tr>
-        <tr>
-            <td>Marketing</td>
-            <td><h3>Lead: Las S. (2016)</h3>
-                <p>Jonathan L. (2016)</p>
-            </td>
-        </tr>
-    </table>
+    <div id="page">
+        <div id="header">
+            {% include header.html %}
+        </div>
+        <div id="navbar">
+            {% include navbar.html %}
+        </div>
+        <div id="main">
+            <h1>Team Roster</h1>
+            <table id="team-table" border=0>
+                <colgroup>
+                    <col span="1">
+                    <col span="1">
+                </colgroup>
+                <thead>
+                    <tr>
+                        <td><h2>Sub-division</h2></td>
+                        <td><h2>Members</h2></td>
+                    </tr>
+                </thead>
+                <tr class="normalp">
+                    <td>Coaches + Mentors</td>
+                    <td><h3>Coach: Karen Bazemore</h3>
+                        <p>C. Garrity (College Student and FIRST alum)</p>
+                        <p>J. Stork (NNPS)</p>
+                        <p>M. Johnson (US Navy and FIRST alum)</p>
+                        <p>E. Leeks (Huntington Ingalls)</p>
+                    </td>
+                </tr>
+                <tr class="normalp">
+                    <td>Captains</td>
+                    <td><h3>Co-Team Captains: Christian M. (2015) & Sahaj B. (2015)</h3>
+                        <p>Safety Captain: Las S. (2016)</p></td>
+                </tr>
+                    <td>Mechanical</td>
+                    <td><h3>Co-Leads: Ernest N. (2016) & Adam P. (2016)</h3>
+                        <p>Courtney S. (2014)</p>
+                        <p>Sahaj B. (2015)</p>
+                        <p>Christian M. (2015)</p>
+                        <p>Dani C. (2016)</p>
+                        <p>Taj F. (2016)</p>
+                        <p>Quintin L. (2016)</p>
+                        <p>Justin G. (2016)</p>
+                        <p>Joanne S. (2016)</p>
+                        <p>Joe B. (2017)</p>
+                        <p>Daniel B. (2017)</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Electrical</td>
+                    <td><h3>Lead: Quintin L. (2016)</h3>
+                        <p>Lawrence P. (2015)</p>
+                        <p>Sarah F. (2016)</p>
+                        <p>Ernest N. (2016)</p>
+                        <p>Joanne S. (2016)</p>
+                        <p>Daniel B. (2017)</p>
+                        <p>Valencia R. (2017)</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Programming</td>
+                    <td><h3>Lead: Sahaj B. (2015)</h3>
+                        <p>Lawrence P. (2015)</p>
+                        <p>Rakshith R. (2015)</p>
+                        <p>Sarah F. (2016)</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Strategy</td>
+                    <td><h3>Lead: Christian M. (2015)</h3>
+                        <p>Sahaj B. (2015)</p>
+                        <p>Lawrence P. (2015)</p>
+                        <p>Rakshith R. (2015)</p>
+                        <p>Quintin L. (2016)</p>
+                        <p>Ernest N. (2016)</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Design</td>
+                    <td><h3>Lead: Christian M. (2015)</h3>
+                        <p>Sahaj B. (2015)</p>
+                        <p>Rakshith R. (2015)</p>
+                        <p>Ernest N. (2016)</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Website / Social Media</td>
+                    <td><h3>Lead: Jonathan L. (2016)</h3></td>
+                </tr>
+                <tr>
+                    <td>Marketing</td>
+                    <td><h3>Lead: Las S. (2016)</h3>
+                        <p>Jonathan L. (2016)</p>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div id="footer">
+            {% include footer.html %}
+        </div>
+    </div>
+<!--
+    KEEPS NAVBAR BELOW HEADER, BUT STICKS TO THE TOP
+    ADD TOTAL PADDING (TOP AND BOTTOM) TO 'h'
+-->
     <script>
-        window.parent.addEventListener('message', function (e) {
-        var eventName = e.data[0],
-        var data      = e.data[1];
-
-        switch (eventName) {
-            case 'referrer': injectBaseElement(data); break;
-            ...
-        }
-
-        }, false);
+        $(window).scroll(function(){
+            var s=$(this).scrollTop(),
+                h=$('#header').height();
+            if(s<h)
+                $('#navbar').css('top',(h+10)-s);
+            else
+                $('#navbar').css('top',0);
+            });
     </script>
+<!--
+    GOOGLE ANALYTICS
+-->
     <script>
-        function resize() {
-            var height = $(html).height();
-            
-            // Backwards – send message to parent
-            window.parent.postMessage(['setHeight', height], '*');
-        }
-    </script>
-    <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
-    ga('send', 'pageview');
+        ga('create', 'UA-47687035-1', 'warwickhsrobotics.github.io');
+        ga('send', 'pageview');
 
     </script>
 </body>
